--- a/app/views/posts/category.html.erb
+++ b/app/views/posts/category.html.erb
@@ -1,7 +1,22 @@
 <div class="container"> 
 
-<h2>カテゴリー "<%= @category.name %>" の投稿一覧</h2>
+  <h2 class="text-center">カテゴリー "<%= @category.name %>" の投稿一覧</h2>
 
-<%= render 'posts/index' , posts: @posts %>
+  <div class="col-xs-4">
+    <div class="box2">
+      <div class="box-title">カテゴリー一覧</div>
+      <ul class="list-category">
+        <% @categories.each do |category| %>
+          <li>
+            <%= link_to category_path(@post, name: category.name) do %>
+              <%= category.name %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+
+  <%= render 'posts/index' , posts: @posts %>
 
 </div>
