--- a/app/views/posts/hashtag.html.erb
+++ b/app/views/posts/hashtag.html.erb
@@ -1,6 +1,7 @@
 <div class="container"> 
-<h2>ハッシュタグ "<%= @hashtag.hashname %>" の投稿一覧</h2>
 
-<%= render 'posts/index' , posts: @posts %>
+  <h2 class="text-center">ハッシュタグ "<%= @hashtag.hashname %>" の投稿一覧</h2>
+
+  <%= render 'posts/index' , posts: @posts %>
 
 </div>
