--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,14 +1,14 @@
 <div class="container"> 
 
-<% if @model == 'user' %>
-  <h3>Users search for '<%= @content %>' </h3>
-  <%= render 'users/index' , users: @records %>
-<% elsif @model == 'post' %>
-  <h3>Posts search for '<%= @content %>' </h3>
-  <%= render 'posts/index' , posts: @records %>
-<% else %>
-  <h3>Prefectures search for '<%= @content %>' </h3>
-  <%= render 'posts/index' , posts: @records %>
-<% end %> 
+  <% if @model == 'user' %>
+    <h3 class="text-center">Users search for '<%= @content %>' </h3>
+    <%= render 'users/index' , users: @records %>
+  <% elsif @model == 'post' %>
+    <h3 class="text-center">Posts search for '<%= @content %>' </h3>
+    <%= render 'posts/index' , posts: @records %>
+  <% else %>
+    <h3 class="text-center">Prefectures search for '<%= @content %>' </h3>
+    <%= render 'posts/index' , posts: @records %>
+  <% end %> 
 
 </div>
