--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,3 +1,4 @@
+<div class="col-xs-8">
 <% users.each do |user| %>
   <div class="col-xs-8">
     <div class="box1">
@@ -24,3 +25,5 @@
     </div>
   </div>
 <% end %>
+<%= paginate @users %>
+</div>
